# backtest-trading

./: Caiu Comprou.ipynb  README.md  Subiu Vendeu.ipynb  horario+desagio_saida1hr.ipynb  horario+desagio_saidaFech.ipynb  horario+desagio_saidaFechVenda.ipynb  pyproject.toml
