[tool.poetry]
name = "backtests mercado financeiro"
version = "0.1.0"
description = "Conjunto de arquivos python que realizam backtests de estrategias de trading"
authors = ["Igor Martins da Silva"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
metatrader5 = "^5.0.45"
datetime = "^5.3"
pytz = "^2023.3.post1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
